[package]
name = "minenode"
version = "0.0.1"
description = "MineNode Native Library"
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
napi = { version = "2", features = ["full"] }
napi-derive = { version = "2", features = ["type-def"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = "0.8"

[build-dependencies]
napi-build = "1"
